--- a/package.json
+++ b/package.json
@@ -33,8 +33,18 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^13.9.1",
+    "@types/colors": "^1.1.2",
+    "@types/express": "^4.0.35",
+    "@types/inquirer": "0.0.32",
+    "@types/ioredis": "0.0.22",
+    "@types/jasmine": "^2.5.47",
+    "@types/lodash": "^4.14.61",
+    "@types/node": "^6.0.60",
+    "@types/request": "0.0.42",
+    "@types/socket.io": "^1.4.29",
+    "@types/sqlite3": "^2.2.33",
+    "@types/yargs": "^6.6.0",
+    "jasmine": "^2.5.3",
     "typescript": "^3.8.3"
   },
   "peerDependecies": {
