--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   "description": "Laravel Echo Node JS Server for Socket.io",
   "devDependencies": {
     "@types/lodash": "^4.14.93",
-    "@types/node": "^6.0.60",
+    "@types/node": "16.11.41",
     "typescript": "^2.6.0"
   },
   "homepage": "https://github.com/tlaverdure/Laravel-Echo-Server#readme",
